<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:src="@drawable/profile_placeholder"
                app:civ_border_color="@color/light_blue_600"
                app:civ_border_width="1dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_25_top"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/guideline_button_end"
                app:layout_constraintHeight_max="200dp"
                app:layout_constraintStart_toStartOf="@id/guideline_button_start"
                app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_25_top"
                app:layout_constraintWidth_max="200dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_icon_round"
                android:src="@drawable/ic_baseline_add_a_photo_24"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.88"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.05"
                app:tint="?attr/colorPrimary" />

            <EditText
                android:id="@+id/inputFullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext_round_corner"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:hint="@string/prompt_full_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingVertical="15dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
                app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_center"
                app:layout_constraintWidth_max="500dp" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_edittext_round_corner"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="12dp"
                android:hint="@string/prompt_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingVertical="15dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
                app:layout_constraintTop_toBottomOf="@+id/inputFullName"
                app:layout_constraintWidth_max="500dp" />


            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_edittext_round_corner"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="12dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingVertical="15dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail"
                app:layout_constraintWidth_max="500dp" />

            <EditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_edittext_round_corner"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="12dp"
                android:hint="@string/prompt_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingVertical="15dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword"
                app:layout_constraintWidth_max="500dp" />

            <CheckBox
                android:id="@+id/checkBoxShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_check_box_show_password"
                app:layout_constraintStart_toStartOf="@+id/inputConfirmPassword"
                app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />

            <Button
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingVertical="15dp"
                android:text="@string/action_sign_up"
                app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_end"
                app:layout_constraintEnd_toStartOf="@+id/guideline_button_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_button_start"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxShowPassword"
                app:layout_constraintVertical_bias="0.4"
                app:layout_constraintWidth_max="350dp" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/inputConfirmPassword"
                app:layout_constraintStart_toStartOf="@+id/inputConfirmPassword"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_button_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.04" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.96" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_25_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.20" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>